# udfs

./: .gitignore  fscntrl.cpp
udf_info/: alloc.cpp  extent.cpp  mount.cpp  udf_info.cpp
udfct/: CONTACT.TXT  FAQ.TXT  README.TXT  RELEASENOTES.TXT  udfct.sln
udfct/relnotes/: RN_0_5r1.TXT  RN_0_5r4.TXT  RN_0_6r1.TXT  RN_0_6r2.TXT  RN_0_6r5.TXT  RN_0_6r6.TXT  RN_0_7r5.TXT  RN_0_7r7.TXT  RN_0_8r1.TXT  RN_0_8r2.TXT  RN_0_8r5.TXT  RN_0_8r6.TXT  RN_0_8r8.TXT  RN_0_9r1.TXT  RN_0_9r2.TXT  RN_0_9r5.TXT  RN_0_9r6.TXT  RN_0_9r7.TXT  RN_1_0r1.TXT  RN_1_0r2.TXT  RN_1_0r5.TXT  RN_1_1r0.TXT  RN_1_2r0.TXT  RN_1_2r2.TXT  RN_1_3r0.TXT  RN_1_4r0.TXT  RN_1_4r2.TXT  RN_1_5r0.TXT  RN_1_5r2.TXT  RN_1_5r4.TXT
udfct/uct_core/: LICENSE.TXT  Makefile  crc.c  device.c  general.c  general.h  mytypes.h  uct_core.vcproj  uct_core.vcxproj  uct_core.vcxproj.filters  uctallocation.c  uctendian.c  uctendian.h  ucterror.c  ucterror.h  uctfarapart.c  uctfiles.c  uctfiles.h  uctgeneral.c  uctgeneral.h  uctmedium.c  uctnodes.c  uctstatus.c  ucttimestamp.c  ucttimestamp.h  uctverify.c  uctverify.h  uctversion.h  udfstruct.h  unicode.c  unicode.h
udfct/udf_scsi/: Makefile  scsiapi.c  scsiapi.h  scsidefs.h  udf_scsi.vcproj  udf_scsi.vcxproj  udf_scsi.vcxproj.filters  wnaspi32.h
udfct/udf_tester/: Makefile  Makefile.uct  commandline.c  commandline.h  drive_device.c  drive_device.h  img_device.c  img_device.h  mfile.c  mfile.h  platform.c  platform.h  raw_device.c  raw_device.h  scsi_device.c  scsi_device.h  selectdevice.c  selectdevice.h  udf_test  udf_test.c  udf_tester.vcproj  udf_tester.vcxproj  udf_tester.vcxproj.filters  version.h  write_image.c  write_image.h
udfs_driver/: Makefile  README.md
udfs_driver/examples/: simple_example.c
udfs_driver/include/: udfs.h
udfs_driver/src/: udfs.c
udfs_driver/test/: test_udfs.c
windows_driver/: CMakeLists.txt  DEBUG_OUTPUT_EXAMPLE.txt  README.md  cleanup.c  close.c  create.c  dirctrl.c  fileinfo.c  fsctrl.c  reactos_compat.h  read.c  udfct_windows.c  udfs.c  udfs.rc  udfs_debug.c  udfs_debug.h  udfsprocs.h  volinfo.c  write.c
windows_driver/uct_core/: crc.h  device.c  device.h  general.c  general.h  mytypes.h  uct_core.h  uctallocation.c  uctallocation.h  uctdata.h  uctendian.c  ucterror.c  uctfarapart.c  uctfarapart.h  uctfiles.c  uctgeneral.c  uctgeneral.h  uctmedium.c  uctmedium.h  uctnodes.c  uctnodes.h  uctstatus.c  uctstatus.h  uctverify.c  uctverify.h  udfstruct.h
windows_driver/udf_scsi/: wnaspi32.lib
